data/Java/16-illegal-constructor-name/6/[M]Error.txt
https://stackoverflow.com/questions/22162271/java-invalid-method-declaration-return-type-required-for-a-method
WriteContacts.java:57: error: invalid method declaration; return type required
    public WriteContacts2()
           ^